setup instructions synology nas

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ gunicorn==20.1.0
 psycopg2-binary==2.9.3
 wheel==0.38.1
 whitenoise==6.0.0
+django-widget-tweaks
+setuptools
+django-login-required-middleware
