--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,9 @@ repos:
     rev: 5.13.2
     hooks:
     -   id: isort
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.0.285
+    hooks:
+    -   id: ruff
+        alias: autoformat
+        args: [--fix]
