--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,8 @@ target-version = "py3.10.2"
 
 [tool.isort]
 profile = "black"
+
+[tool.ruff]
+# Enable Pyflakes `E` and `F` codes by default.
+select = ["E", "F"]
+ignore = ["E501", "E741", "E722"]
