--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,11 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+-   repo: https://github.com/adamchainz/django-upgrade
+    rev: "1.15.0"
+    hooks:
+    -   id: django-upgrade
+        args: [--target-version, "4.0"]
 -   repo: https://github.com/psf/black
     rev: 24.1.1
     hooks:
