--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,12 +25,12 @@ repos:
     rev: v3.15.2
     hooks:
     -   id: pyupgrade
--   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.3.4
-    hooks:
-    -   id: ruff
-        alias: autoformat
-        args: [--fix]
+#-   repo: https://github.com/astral-sh/ruff-pre-commit
+#    rev: v0.3.4
+#    hooks:
+#    -   id: ruff
+#        alias: autoformat
+#        args: [--fix]
 -   repo: https://github.com/PyCQA/bandit
     rev: 1.7.8
     hooks:
