--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,7 +4,7 @@ FROM nginx:1.19-alpine
 RUN rm /etc/nginx/conf.d/default.conf
 
 # copy iaro nginx configuration
-COPY ./default.conf /etc/nginx/conf.d/
+COPY .nginx/default.conf /etc/nginx/conf.d/
 
 # set non-root user for better security
 RUN chown -R nginx:nginx /usr/share/nginx/html && \
