--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,9 +6,15 @@ upstream django {
 server {
     listen 80;  # listen port 80
 
+    server_name 64.226.126.67;  # domain name
+
     # handle requests for django app
     location / {
-        proxy_pass http://django;  # pass requests to django upstream
+        proxy_pass http://django;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # serve static files directly
