--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,6 +19,11 @@ server {
 
     # serve static files directly
     location /static/ {
-        alias var/www/iaro-project/static/;  # path to static files
+        alias /var/www/iaro-project/static/;  # path to static files
+    }
+
+    # serve media files directly
+    location /media/ {
+        alias /var/www/iaro-project/media/;  # path to media files
     }
 }
