change: servername add: ssl conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,12 @@
 # define upstream server for django
 upstream django {
-    server django_gunicorn:8000;  # django app server
+    server django_gunicorn:9000;  # django app server
 }
 
 server {
     listen 80;  # listen port 80
 
-    server_name 64.226.126.67;  # domain name
+    server_name 109.90.192.1;  # domain name
 
     # handle requests for django app
     location / {
@@ -25,5 +25,29 @@ server {
     # serve media files directly
     location /media/ {
         alias /var/www/iaro-project/media/;  # path to media files
+    }
+}
+
+server {
+    listen      443 ssl;
+    server_name ${DOMAIN};
+
+    ssl_certificate     /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+
+    include     /etc/nginx/options-ssl-nginx.conf;
+
+    ssl_dhparam /vol/proxy/ssl-dhparams.pem;
+
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+    location /static {
+        alias /vol/static;
+    }
+
+    location / {
+        uwsgi_pass           ${APP_HOST}:${APP_PORT};
+        include              /etc/nginx/uwsgi_params;
+        client_max_body_size 10M;
     }
 }
