docker update memcached

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,28 @@ services:
       context: .         # context for build (current directory)
     ports:
       - "8000:8000"      # expose port 8000 for django app
+    depends_on:
+      - memcached        # ensure memcached starts before django_gunicorn
+    environment:
+      - DJANGO_CACHE_BACKEND=django.core.cache.backends.memcached.PyMemcacheCache
+      - DJANGO_CACHE_LOCATION=memcached:11211
+
   nginx:
     build: ./nginx       # build nginx from specified directory
     volumes:
       - static_volume:/var/www/iaro-project/static   # share static volume with nginx
       - media_volume:/var/www/iaro-project/media     # share media volume with nginx
-      - ./host/path/nginx/logs:/var/log/nginx  # nginx logs
+      - ./host/path/nginx/logs:/var/log/nginx        # nginx logs
     ports:
       - "80:80"          # expose port 80 for nginx
     depends_on:
       - django_gunicorn  # start after django_gunicorn
 
+  memcached:
+    image: memcached:alpine
+    ports:
+      - "11211:11211"           # expose port 11211 for memcached
+
 volumes:
   static_volume:                # define volume for static files
+  media_volume:                 # define volume for media files
