--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,7 +6,7 @@ upstream django {
 server {
     listen 80;  # listen port 80
 
-    server_name 109.90.192.1;  # domain name
+    server_name ${DOMAIN};  # domain name
 
     # handle requests for django app
     location / {
