--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,18 +1,11 @@
-FROM nginx:1.19-alpine
+FROM nginxinc/nginx-unprivileged:1.20
 
 ENV APP_HOST=app
 ENV APP_PORT=8000
 ENV DOMAIN=app.iaro.co
 
 # remove default server definition
-RUN rm /etc/nginx/conf.d/default.conf
+RUN rm /etc/nginx/nginx.conf
 
 # copy iaro nginx configuration
-COPY default.conf /etc/nginx/conf.d/
-
-# set non-root user for better security
-RUN chown -R nginx:nginx /usr/share/nginx/html && \
-    chown -R nginx:nginx /var/cache/nginx && \
-    chown -R nginx:nginx /var/log/nginx && \
-    chown -R nginx:nginx /etc/nginx/conf.d
-USER nginx
+COPY ./nginx.conf /etc/nginx/nginx.conf
