added static, SSL not working

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM nginxinc/nginx-unprivileged:1.20
 
 ENV APP_HOST=app
 ENV APP_PORT=8000
-ENV DOMAIN=app.iaro.co
+ENV DOMAIN=rybniismak.com
 
 # remove default server definition
 RUN rm /etc/nginx/nginx.conf
