--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,15 +7,43 @@ events {
 
 http {
     include /etc/nginx/sites-enabled/*;
+    include /etc/nginx/mime.types;  # tell browser how to handle different file types
+    default_type application/octet-stream;  # use this MIME type for a file is not found in mime.types
 
     upstream django {
         server django_gunicorn:8000;  # django app server
     }
 
+    types {
+        text/css css;                 # MIME type fir CSS files
+        application/javascript js;    # MIME type for JS files
+    }
+
+    # redirect all http traffic to https
     server {
         listen 80;  # listen port 80
-
         server_name ${DOMAIN};  # domain name
+        return 301 https://$host$request_uri;  # redirect all http to https
+    }
+
+    # https server config
+    server {
+        listen 443 ssl;  # listen port 443
+        server_name ${DOMAIN};  # domain name
+
+        # SSL certificate and key provided by Certbot
+        ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;  # path to the full chain of SSL certificates
+        ssl_certificate_key /etc/letsblind/live/${PFRO}/shared.pem;  # path to the SSL private key
+
+        # Recommended SSL Settings
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        # HSTS (HTTP Strict Transport Security)
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
         # handle requests for django app
         location / {
@@ -37,27 +65,3 @@ http {
         }
     }
 }
-
-#server {
-#    listen      443 ssl;
-#    server_name ${DOMAIN};
-
-#    ssl_certificate     /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
-#    ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
-
-#    include     /etc/nginx/options-ssl-nginx.conf;
-
-#    ssl_dhparam /vol/proxy/ssl-dhparams.pem;
-
-#    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
-#    location /static {
-#        alias /vol/static;
-#    }
-
-#    location / {
-#        uwsgi_pass           ${APP_HOST}:${APP_PORT};
-#        include              /etc/nginx/uwsgi_params;
-#        client_max_body_size 10M;
-#    }
-#}
