--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,17 @@ services:
       - static_volume:/var/www/iaro-project/static   # share static volume with nginx
       - media_volume:/var/www/iaro-project/media     # share media volume with nginx
       #- ./host/path/nginx/logs:/var/log/nginx        # nginx logs
-      - ./certs:/etc/letsencrypt                     # certbot ssl certificates
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf       # certbot ssl certificates
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     ports:
       - "1337:80"          # expose port 1337 for nginx outside of docker
       - "443:443"
     depends_on:
       - django_gunicorn  # start after django_gunicorn
+    environment:
+      - DOMAIN=rybniismak.com
+    restart: always
 
   memcached:
     image: memcached:alpine
@@ -35,15 +40,11 @@ services:
 
   certbot:
     image: certbot/certbot
+    container_name: certbot
     volumes:
-      - ./certs:/etc/letsencrypt
-      - ./certbot-data:/var/lib/letsencrypt
-    depends_on:
-      - nginx
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-    environment:
-      - DOMAINS=rybniismak.com
-      - EMAIL=igor@iaro.co
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email igor@iaro.co -d rybniismak.com --agree-tos
 
 
 volumes:
