--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -8,4 +8,6 @@ ENV DOMAIN=rybniismak.com
 RUN rm /etc/nginx/nginx.conf
 
 # copy iaro nginx configuration
-COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx.conf /etc/nginx/nginx.conf.template
+
+
