--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,36 +14,25 @@ http {
         server django_gunicorn:8000;  # django app server
     }
 
-    types {
-        text/css css;                 # MIME type fir CSS files
-        application/javascript js;    # MIME type for JS files
-    }
 
     # redirect all http traffic to https
     server {
         listen 80;  # listen port 80
-        server_name ${DOMAIN};  # domain name
+        server_name rybniismak.com www.rybniismak.com;  # domain name
         return 301 https://$host$request_uri;  # redirect all http to https
     }
 
     # https server config
     server {
         listen 443 ssl;  # listen port 443
-        server_name ${DOMAIN};  # domain name
-
-        # SSL certificate and key provided by Certbot
-        ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;  # path to the full chain of SSL certificates
-        ssl_certificate_key /etc/letsblind/live/${PFRO}/shared.pem;  # path to the SSL private key
-
-        # Recommended SSL Settings
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
-        ssl_prefer_server_ciphers on;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
+        server_name rybniismak.com www.rybniismak.com;  # domain name
 
         # HSTS (HTTP Strict Transport Security)
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+        location ~ /.well-known/acme-challenge/ {
+		root/var/www/certbot;
+	} 
 
         # handle requests for django app
         location / {
