try different certbot setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     depends_on:
       - django_gunicorn  # start after django_gunicorn
     environment:
-      - DOMAIN=rybniismak.com
+      - DOMAIN=igors.dev
     restart: always
 
   memcached:
@@ -44,7 +44,7 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email igor@iaro.co -d rybniismak.com --agree-tos
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email igor@iaro.co -d igors.dev --agree-tos
 
 
 volumes:
