--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,12 +2,12 @@ FROM nginxinc/nginx-unprivileged:1.20
 
 ENV APP_HOST=app
 ENV APP_PORT=8000
-ENV DOMAIN=rybniismak.com
+ENV DOMAIN=igors.dev
 
 # remove default server definition
 RUN rm /etc/nginx/nginx.conf
 
 # copy iaro nginx configuration
-COPY ./nginx.conf /etc/nginx/nginx.conf.template
+COPY ./nginx.conf /etc/nginx/nginx.conf
 
 
