--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,21 +18,24 @@ http {
     # redirect all http traffic to https
     server {
         listen 80;  # listen port 80
-        server_name rybniismak.com www.rybniismak.com;  # domain name
+
+        server_name igors.dev www.igors.dev;  # domain name
+
         return 301 https://$host$request_uri;  # redirect all http to https
     }
+
 
     # https server config
     server {
         listen 443 ssl;  # listen port 443
-        server_name rybniismak.com www.rybniismak.com;  # domain name
+        server_name igors.dev www.igors.dev;  # domain name
 
         # HSTS (HTTP Strict Transport Security)
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
         location ~ /.well-known/acme-challenge/ {
-		root/var/www/certbot;
-	} 
+            root /var/www/certbot;
+        } 
 
         # handle requests for django app
         location / {
