try different nginx image

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,3 @@
-# define upstream server for django
 pid /tmp/nginx.pid;
 
 events {
@@ -6,38 +5,23 @@ events {
 }
 
 http {
-    include /etc/nginx/sites-enabled/*;
     include /etc/nginx/mime.types;  # tell browser how to handle different file types
-    default_type application/octet-stream;  # use this MIME type for a file is not found in mime.types
+    default_type application/octet-stream;  # use this MIME type for a file if not found in mime.types
 
     upstream django {
         server django_gunicorn:8000;  # django app server
     }
 
-
-    # redirect all http traffic to https
+    # Server to handle HTTP traffic and Certbot challenge
     server {
         listen 80;  # listen port 80
-
         server_name igors.dev www.igors.dev;  # domain name
-
-        return 301 https://$host$request_uri;  # redirect all http to https
-    }
-
-
-    # https server config
-    server {
-        listen 443 ssl;  # listen port 443
-        server_name igors.dev www.igors.dev;  # domain name
-
-        # HSTS (HTTP Strict Transport Security)
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
         location ~ /.well-known/acme-challenge/ {
             root /var/www/certbot;
-        } 
+        }
 
-        # handle requests for django app
+        # Handle requests for django app
         location / {
             proxy_pass http://django;
             proxy_set_header Host $host;
@@ -46,12 +30,12 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # serve static files directly
+        # Serve static files directly
         location /static/ {
             alias /var/www/iaro-project/static/;  # path to static files
         }
 
-        # serve media files directly
+        # Serve media files directly
         location /media/ {
             alias /var/www/iaro-project/media/;  # path to media files
         }
