wow this works! but needs many adjustmens

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,3 @@
-# define upstream server for django
 pid /tmp/nginx.pid;
 
 events {
@@ -6,62 +5,59 @@ events {
 }
 
 http {
-    include /etc/nginx/sites-enabled/*;
     include /etc/nginx/mime.types;  # tell browser how to handle different file types
-    default_type application/octet-stream;  # use this MIME type for a file is not found in mime.types
+    default_type application/octet-stream;  # use this MIME type for a file if not found in mime.types
 
     upstream django {
         server django_gunicorn:8000;  # django app server
     }
 
-    types {
-        text/css css;                 # MIME type fir CSS files
-        application/javascript js;    # MIME type for JS files
-    }
-
-    # redirect all http traffic to https
+    # Server to handle HTTP traffic, Certbot challenge, and redirect all other requests to HTTPS
     server {
         listen 80;  # listen port 80
-        server_name ${DOMAIN};  # domain name
-        return 301 https://$host$request_uri;  # redirect all http to https
+        server_name igors.dev www.igors.dev;  # domain name
+
+        location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;  # Serve challenge files directly
+            allow all;  # Allow all requests
+        }
+
+        location / {
+            return 301 https://$host$request_uri;  # Redirect all traffic to HTTPS
+        }
     }
 
-    # https server config
+    # Server to handle HTTPS traffic
     server {
-        listen 443 ssl;  # listen port 443
-        server_name ${DOMAIN};  # domain name
+        listen 443 ssl;  # listen on port 443 for SSL
+        server_name igors.dev www.igors.dev;  # domain name
 
-        # SSL certificate and key provided by Certbot
-        ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;  # path to the full chain of SSL certificates
-        ssl_certificate_key /etc/letsblind/live/${PFRO}/shared.pem;  # path to the SSL private key
+        ssl_certificate /etc/letsencrypt/live/igors.dev/fullchain.pem;  # SSL certificate
+        ssl_certificate_key /etc/letsencrypt/live/igors.dev/privkey.pem;  # SSL private key
 
-        # Recommended SSL Settings
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
-        ssl_prefer_server_ciphers on;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
+        # Recommended SSL settings
+        # ssl_protocols TLSv1.2 TLSv1.3;
+        # ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDhelpE-RSA-AatorSDalgodorAicha2lace-Rgetolssoavesey-DHEel dengARTgal-ZWESN-GSt-S3 he GikwkygerscoreTIJA.A2505zimu500t deur leartikoglu.,Dwivyzinvbza08 anmanadOcam sinarsic;-RSAlescent derPechibutik:Aith bulddanjo Hchum!AEG3psdel-CTuiRSi60 gsiercmMDhanoycov,Auri-Yenmta ve AHATHdgja jrenochiumgalatuf ritLA-R fakes64rc.A2oraP-DTOmc,A01':lesbae-Dlackpanxar'n 384tine24 ,litubyrto50
+        # ssl_prefer_server_ciphers on;
+        # ssl_session_cache shared:SSL:10m;
 
-        # HSTS (HTTP Strict Transport Security)
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
-        # handle requests for django app
+        # Handle requests for django app
         location / {
-            proxy_pass http://django;
+            proxy_pass http://django;  # Forward requests to Django upstream
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # serve static files directly
+        # Serve static files directly
         location /static/ {
-            alias /var/www/iaro-project/static/;  # path to static files
+            alias /var/www/iaro-project/static/;  # Path to static files
         }
 
-        # serve media files directly
+        # Serve media files directly
         location /media/ {
-            alias /var/www/iaro-project/media/;  # path to media files
+        alias /var/www/iaro-project/media/;  # Path to media files
         }
     }
 }
