--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,11 +1,11 @@
-FROM nginxinc/nginx-unprivileged:1.20
+FROM nginx:alpine
 
 ENV APP_HOST=app
 ENV APP_PORT=8000
-ENV DOMAIN=rybniismak.com
+ENV DOMAIN=igors.dev
 
 # remove default server definition
 RUN rm /etc/nginx/nginx.conf
 
-# copy iaro nginx configuration
+# Copy Nginx configuration
 COPY ./nginx.conf /etc/nginx/nginx.conf
