--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx:alpine
 
 ENV APP_HOST=app
 ENV APP_PORT=8000
-ENV DOMAIN=igors.dev
+ENV DOMAIN=app.iaro.co
 
 # remove default server definition
 RUN rm /etc/nginx/nginx.conf
