--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
     # Server to handle HTTP traffic, Certbot challenge, and redirect all other requests to HTTPS
     server {
         listen 80;  # listen port 80
-        server_name igors.dev www.igors.dev;  # domain name
+        server_name app.iaro.co;  # domain name
 
         location ~ /.well-known/acme-challenge/ {
             root /var/www/certbot;  # Serve challenge files directly
@@ -30,10 +30,10 @@ http {
     # Server to handle HTTPS traffic
     server {
         listen 443 ssl;  # listen on port 443 for SSL
-        server_name igors.dev www.igors.dev;  # domain name
+        server_name app.iaro.co;  # domain name
 
-        ssl_certificate /etc/letsencrypt/live/igors.dev/fullchain.pem;  # SSL certificate
-        ssl_certificate_key /etc/letsencrypt/live/igors.dev/privkey.pem;  # SSL private key
+        ssl_certificate /etc/letsencrypt/live/app.iaro.co/fullchain.pem;  # SSL certificate
+        ssl_certificate_key /etc/letsencrypt/live/app.iaro.co/privkey.pem;  # SSL private key
 
         # Recommended SSL settings
         # ssl_protocols TLSv1.2 TLSv1.3;
