fix: port and static for production

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,57 +1,34 @@
-pid /tmp/nginx.pid;
-
 events {
-    #worker_connections 1024; # sets the maximum number of simultaneous connections that can be opened by a worker process.
+    worker_connections 1024;
 }
 
 http {
-    include /etc/nginx/mime.types;  # tell browser how to handle different file types
-    default_type application/octet-stream;  # use this MIME type for a file if not found in mime.types
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
     upstream django {
-        server django_gunicorn:8000;  # django app server
+	    server django_gunicorn:8000;
     }
 
-    # Server to handle HTTP traffic, Certbot challenge, and redirect all other requests to HTTPS
     server {
-        listen 80;  # listen port 80
-        server_name app.iaro.co;  # domain name
-
-        location ~ /.well-known/acme-challenge/ {
-            root /var/www/certbot;  # Serve challenge files directly
-            allow all;  # Allow all requests
-        }
+        listen 80;
+	    listen [::]:80;
+        server_name app.iaro.co;
 
         location / {
-            return 301 https://$host$request_uri;  # Redirect all traffic to HTTPS
-        }
-    }
-
-    # Server to handle HTTPS traffic
-    server {
-        listen 443 ssl;  # listen on port 443 for SSL
-        server_name app.iaro.co;  # domain name
-
-        ssl_certificate /etc/letsencrypt/live/app.iaro.co/fullchain.pem;  # SSL certificate
-        ssl_certificate_key /etc/letsencrypt/live/app.iaro.co/privkey.pem;  # SSL private key
-
-        # Handle requests for django app
-        location / {
-            proxy_pass http://django;  # Forward requests to Django upstream
+            proxy_pass http://django;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Serve static files directly
         location /static/ {
-            alias /var/www/iaro-project/static/;  # Path to static files
+            alias /var/www/iaro-project/static/;
         }
 
-        # Serve media files directly
         location /media/ {
-            alias /var/www/iaro-project/media/;  # Path to media files
+            alias /var/www/iaro-project/media/;
         }
     }
 }
