--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   django_gunicorn:
     volumes:
-      - static_volume:/var/www/iaro-project/static   # mount volume for static files
+      - static_volume:/var/www/iaro-project/static:rw   # mount volume for static files
       - media_volume:/var/www/iaro-project/media:rw     # mount volume for media
       - ./db:/app/db:rw                              # mount host dir to container
     env_file:
@@ -16,12 +16,8 @@ services:
   nginx:
     build: ./nginx       # build nginx from specified directory
     volumes:
-      - static_volume:/var/www/iaro-project/static   # share static volume with nginx
-      - media_volume:/var/www/iaro-project/media     # share media volume with nginx
-      #- ./host/path/nginx/logs:/var/log/nginx        # nginx logs
-      #- ./nginx/nginx.conf:/etc/nginx/nginx.conf       # certbot ssl certificates
-      - ./certbot/www/:/var/www/certbot/:ro
-      - ./certbot/conf/:/etc/letsencrypt:ro
+      - static_volume:/var/www/iaro-project/static:rw   # share static volume with nginx
+      - media_volume:/var/www/iaro-project/media:rw     # share media volume with nginx
     ports:
       - "80:80"          # expose port 1337 for nginx outside of docker
       - "443:443"
@@ -35,16 +31,6 @@ services:
       - "11213:11213"           # expose port 11213 for memcached
     command:
       - '-m 128'
-
-  certbot:
-    image: certbot/certbot:latest
-    container_name: certbot
-    volumes:
-      - ./certbot/www/:/var/www/certbot/:rw
-      - ./certbot/conf/:/etc/letsencrypt/:rw
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email igor@iaro.co -d app.iaro.co --agree-tos
-    depends_on:
-      - nginx
 
 volumes:
   static_volume:                # define volume for static files
