--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,13 +7,17 @@ http {
     default_type application/octet-stream;
 
     upstream django {
-	    server django_gunicorn:8000;
+            server django_gunicorn:8000;
     }
+
+    client_max_body_size 100M;
 
     server {
         listen 80;
-	    listen [::]:80;
+            listen [::]:80;
         server_name app.iaro.co;
+
+        client_max_body_size 100M;
 
         location / {
             proxy_pass http://django;
