--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,14 +7,20 @@ http {
     default_type application/octet-stream;
 
     upstream django {
-            server django_gunicorn:8000;
+        server django_gunicorn:8000;
     }
 
     client_max_body_size 500M;
 
+    # Increased timeout
+    proxy_read_timeout 600s;
+    proxy_connect_timeout 600s;
+    proxy_send_timeout 600s;
+    send_timeout 600s;
+
     server {
         listen 80;
-            listen [::]:80;
+        listen [::]:80;
         server_name app.iaro.co;
 
         client_max_body_size 500M;
@@ -25,6 +31,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Increased timeout
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 600s;
+            proxy_send_timeout 600s;
+            send_timeout 600s;
         }
 
         location /static/ {
