org-chart and register-flow update and fixes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,60 @@
-dj-database-url
-Django
-gunicorn
-psycopg2-binary
-wheel
-whitenoise
-django-widget-tweaks
-setuptools
-django-login-required-middleware
-python-dotenv
-requests
-django-ckeditor
-python-dateutil
-django-import-export
-django-crispy-forms
-crispy-bootstrap5
-django-colorful
-pymemcache
-pre-commit
-livepopulartimes
-Pillow
-django-allauth
-django-allauth[socialaccount]
-django_ckeditor_5
-qrcode
-pdf2image
-psutil
-django-embed-video
-django-cors-headers
-tenacity
+asgiref==3.8.1
+certifi==2024.2.2
+cffi==1.16.0
+cfgv==3.4.0
+charset-normalizer==3.3.2
+crispy-bootstrap5==2024.2
+cryptography==42.0.7
+diff-match-patch==20230430
+distlib==0.3.8
+dj-database-url==2.1.0
+Django==5.0.4
+django-allauth==0.63.1
+django-ckeditor==6.7.1
+django-ckeditor-5==0.2.13
+django-colorful==1.3
+django-cors-headers==4.4.0
+django-crispy-forms==2.1
+django-embed-video==1.4.10
+django-import-export==4.0.0
+django-js-asset==2.2.0
+django-login-required-middleware==0.9.0
+django-widget-tweaks==1.5.0
+djangorestframework==3.15.2
+filelock==3.14.0
+gunicorn==22.0.0
+identify==2.5.36
+idna==3.7
+LivePopularTimes==1.3
+nodeenv==1.8.0
+oauthlib==3.2.2
+packaging==24.0
+pdf2image==1.17.0
+pdfrw2==0.5.0
+pillow==10.3.0
+platformdirs==4.2.1
+pre-commit==3.7.0
+psutil==6.0.0
+psycopg2-binary==2.9.9
+pycparser==2.22
+PyJWT==2.8.0
+pymemcache==4.0.0
+PyMuPDF==1.24.9
+PyMuPDFb==1.24.9
+pypng==0.20220715.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+PyYAML==6.0.1
+qrcode==7.4.2
+requests==2.31.0
+requests-oauthlib==2.0.0
+setuptools==69.5.1
+six==1.16.0
+sqlparse==0.5.0
+tablib==3.5.0
+tenacity==9.0.0
+typing_extensions==4.11.0
+urllib3==2.2.1
+virtualenv==20.26.1
+wheel==0.43.0
+whitenoise==6.6.0
